--- a/SampleOutput2.html
+++ b/SampleOutput2.html
@@ -9,13 +9,13 @@
     <body>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
-        <div class="Wrapper">
+        <div class="wrapper">
             <aside>
                 <div style="padding: 10px">
                     <input class="form-check-input me-1 FilterAllEventsCheckbox" type="checkbox" id="FilterAllEventsCheckbox" checked="">
                     <label class="form-check-label" for="FilterAllEventsCheckbox">All Events (3)</label>
                 </div>
-                <ul class="list-group" style="padding: 10px">
+                <ul class="list-group" style="width: 400px; padding: 10px">
                     <li class="list-group-item">
                         <input class="form-check-input me-1 EventFilterCheckbox" type="checkbox" id="SimulationStartedEventCheckbox" checked>
                         <label class="form-check-label" for="SimulationStartedEventCheckbox">SimulationStartedEvent (1)</label>
@@ -31,39 +31,9 @@
                 </ul>
             </aside>
 
-            <script type="application/json" id="event-json">
-                var eventData = [
-                                                        {
-                                                            "eventType": "SimulationStartedEvent",
-                                                            "timestamp": "0.0",
-                                                            "eventId": "307439c2-ebc5-4734-bd89-e0bdfb09c1a7",
-                                                            "description": "SimulationStartedEvent",
-                                                            "logs": []
-                                                        },
-                                                        {
-                                                            "eventType": "RallyingCryEvent",
-                                                            "timestamp": "0.0",
-                                                            "eventId": "3a93f359-1ffc-4d19-b18f-2e97760a2d71",
-                                                            "description": "RallyingCryEvent - Increasing Movement Speed and Resource Generation for 6 seconds",
-                                                            "logs": [
-                                                            "Duration Increase from Booming Voice = 1.24x with 3 skill points","Created AuraAppliedEvent for Rallying Cry for 7.44 seconds","Created AuraAppliedEvent for Rallying Cry Cooldown for 25.00 seconds","Enhanced Rallying Cry created AuraAppliedEvent for Unstoppable for 7.44 seconds","Gutteral Yell created GutteralYellProcEvent","Raid Leader created RaidLeaderProcEvent for 7.44 seconds","Strategic Rallying Cry created FortifyGeneratedEvent for 4.00 Fortify","Tactical Rallying Cry created FuryGeneratedEvent for 20.00 Fury","Aspect of Echoing Fury created AspectOfEchoingFuryProcEvent for 4 Fury per second for 7.44 seconds","Bold Chieftain's Aspect reduced Rallying Cry cooldown by 5.70 seconds"
-                                                            ]
-                                                        },
-                                                        {
-                                                            "eventType": "ChallengingShoutEvent",
-                                                            "timestamp": "0.0",
-                                                            "eventId": "f1726f39-d4c8-4387-9df0-033f92df62f8",
-                                                            "description": "ChallengingShoutEvent - Challenging Shout active for 7.44 seconds",
-                                                            "logs": [
-                                                            "Duration Increase from Booming Voice = 1.24x with 3 skill points","Booming Voice duration multiplier = 1.24x","Created AuraAppliedEvent for Challenging Shout expiring in 7.44 seconds","Created AuraAppliedEvent for Challenging Shout cooldown for 25 seconds","Created AuraAppliedEvent for Taunt on Enemy #1 for 7.44 seconds","Created AuraAppliedEvent for Taunt on Enemy #2 for 7.44 seconds","Created AuraAppliedEvent for Taunt on Enemy #3 for 7.44 seconds","Gutteral Yell created GutteralYellProcEvent","Raid Leader created RaidLeaderProcEvent for 7.44 seconds","Aspect of Echoing Fury created AspectOfEchoingFuryProcEvent for 4 Fury per second for 7.44 seconds","Bold Chieftain's Aspect reduced Challenging Shout cooldown by 5.70 seconds"
-                                                            ]
-                                                        }
-                                                    ]
-            </script>
-
             <main>
-                <div class=""wrapper_inner">
-                    <div class="accordion" id="accordionExample" style="width: 1000px; padding: 10px">
+                <div class="wrapper_inner">
+                    <div class="accordion" id="accordionExample" style="padding: 10px">
                         <div class="accordion-item SimulationStartedEvent">
                             <div class="accordion-header">
                                 <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#307439c2-ebc5-4734-bd89-e0bdfb09c1a7" style="padding-left: 5px">
@@ -118,16 +88,10 @@
         <script>
             var eventData = [
                 {
-                    "eventType": "SimulationStartedEvent",
-                    "timestamp": "0.0",
                     "eventId": "307439c2-ebc5-4734-bd89-e0bdfb09c1a7",
-                    "description": "SimulationStartedEvent",
                     "logs": []
                 }, {
-                    "eventType": "RallyingCryEvent",
-                    "timestamp": "0.0",
                     "eventId": "3a93f359-1ffc-4d19-b18f-2e97760a2d71",
-                    "description": "RallyingCryEvent - Increasing Movement Speed and Resource Generation for 6 seconds",
                     "logs": [
                         "Duration Increase from Booming Voice = 1.24x with 3 skill points",
                         "Created AuraAppliedEvent for Rallying Cry for 7.44 seconds",
@@ -141,10 +105,7 @@
                         "Bold Chieftain's Aspect reduced Rallying Cry cooldown by 5.70 seconds"
                     ]
                 }, {
-                    "eventType": "ChallengingShoutEvent",
-                    "timestamp": "0.0",
                     "eventId": "f1726f39-d4c8-4387-9df0-033f92df62f8",
-                    "description": "ChallengingShoutEvent - Challenging Shout active for 7.44 seconds",
                     "logs": [
                         "Duration Increase from Booming Voice = 1.24x with 3 skill points",
                         "Booming Voice duration multiplier = 1.24x",
@@ -187,13 +148,11 @@
             document.querySelectorAll('.accordion-button').forEach(function (button) {
                 button.addEventListener('click', function (event) {
 
-                    if (event.target.classList.contains('collapsed')) { // alert('skipping load');
-                        return;
-                    }
+                    if (event.target.classList.contains('collapsed')) { return; }
+
                     var bodyElement = event.target.parentElement.parentElement.querySelector('.accordion-body');
                     var eventId = bodyElement.parentElement.id;
 
-                    // var eventJson = JSON.parse(document.querySelector('#event-json').innerHTML);
                     var event = eventData.find(function (event) {
                         return event['eventId'] === eventId;
                     });
@@ -208,13 +167,6 @@
         </script>
 
         <style>
-            .EventFilter,
-            .fooaccordion {
-                height: 100vh;
-                float: left;
-                overflow-y: auto;
-            }
-
             body {
                 overflow: hidden;
                 height: 100vh;
@@ -223,7 +175,7 @@
                 overflow-y: auto;
             }
             aside {
-                flex: 1 0 10%;
+                flex: 0 0 10%;
             }
             .wrapper {
                 display: flex;
